--- a/index.html
+++ b/index.html
@@ -552,6 +552,96 @@
                         </div>
                     </div>
                 </div>
+                <div class="col-lg-4 col-md-6 mix all house">
+                    <div class="property-item">
+                        <div class="pi-pic set-bg" data-setbg="img/realisation/a14.jpg">
+                            <div class="label">Afrik Echafaudage</div>
+                        </div>
+                        <div class="pi-text">
+                            <!-- <a href="#" class="heart-icon"><span class="icon_heart_alt"></span></a>
+                            <div class="pt-price">$ 289.0<span>/month</span></div> -->
+                            <h5><a href="#">Construction d'un batiment R+2</a></h5>
+                            <p><span class="icon_pin_alt"></span> Cameroun Limbe, NH 03461</p>
+                            <!-- <ul>
+                                <li><i class="fa fa-object-group"></i> 2, 283</li>
+                                <li><i class="fa fa-bathtub"></i> 03</li>
+                                <li><i class="fa fa-bed"></i> 05</li>
+                                <li><i class="fa fa-automobile"></i> 01</li>
+                            </ul>
+                            <div class="pi-agent">
+                                <div class="pa-item">
+                                    <div class="pa-info">
+                                        <img src="img/property/posted-by/pb-1.jpg" alt="">
+                                        <h6>Ashton Kutcher</h6>
+                                    </div>
+                                    <div class="pa-text">
+                                        123-455-688
+                                    </div>
+                                </div>
+                            </div> -->
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 mix all restaurent hotel">
+                    <div class="property-item">
+                        <div class="pi-pic set-bg" data-setbg="img/realisation/a13.jpg">
+                            <div class="label c-red">Afrik Echafaudage</div>
+                        </div>
+                        <div class="pi-text">
+                            <!-- <a href="#" class="heart-icon"><span class="icon_heart_alt"></span></a>
+                            <div class="pt-price">$ 289.0</div> -->
+                            <h5><a href="#">Stade Japoma</a></h5>
+                            <p><span class="icon_pin_alt"></span> Cameroun Douala, Japoma</p>
+                           <!--  <ul>
+                                <li><i class="fa fa-object-group"></i> 2, 283</li>
+                                <li><i class="fa fa-bathtub"></i> 03</li>
+                                <li><i class="fa fa-bed"></i> 05</li>
+                                <li><i class="fa fa-automobile"></i> 01</li>
+                            </ul>
+                            <div class="pi-agent">
+                                <div class="pa-item">
+                                    <div class="pa-info">
+                                        <img src="img/property/posted-by/pb-1.jpg" alt="">
+                                        <h6>Ashton Kutcher</h6>
+                                    </div>
+                                    <div class="pa-text">
+                                        123-455-688
+                                    </div>
+                                </div>
+                            </div> -->
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 mix all apart office">
+                    <div class="property-item">
+                        <div class="pi-pic set-bg" data-setbg="img/realisation/a12.jpg">
+                            <div class="label c-red">Afrik Echafaudage</div>
+                        </div>
+                        <div class="pi-text">
+                            <!-- <a href="#" class="heart-icon"><span class="icon_heart_alt"></span></a>
+                            <div class="pt-price">$ 289.0</div> -->
+                            <h5><a href="#">Batiment boulement du 20 Mai</a></h5>
+                            <p><span class="icon_pin_alt"></span> Cameroun Yaoundé, Poste centrale</p>
+                            <!-- <ul>
+                                <li><i class="fa fa-object-group"></i> 2, 283</li>
+                                <li><i class="fa fa-bathtub"></i> 03</li>
+                                <li><i class="fa fa-bed"></i> 05</li>
+                                <li><i class="fa fa-automobile"></i> 01</li>
+                            </ul>
+                            <div class="pi-agent">
+                                <div class="pa-item">
+                                    <div class="pa-info">
+                                        <img src="img/property/posted-by/pb-1.jpg" alt="">
+                                        <h6>Ashton Kutcher</h6>
+                                    </div>
+                                    <div class="pa-text">
+                                        123-455-688
+                                    </div>
+                                </div>
+                            </div> -->
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
