--- a/index.html
+++ b/index.html
@@ -560,8 +560,8 @@
                         <div class="pi-text">
                             <!-- <a href="#" class="heart-icon"><span class="icon_heart_alt"></span></a>
                             <div class="pt-price">$ 289.0<span>/month</span></div> -->
-                            <h5><a href="#">Construction d'un batiment R+2</a></h5>
-                            <p><span class="icon_pin_alt"></span> Cameroun Limbe, NH 03461</p>
+                            <h5><a href="#">Construction d'un batiment R+13</a></h5>
+                            <p><span class="icon_pin_alt"></span> Cameroun Douala, Bonanjo</p>
                             <!-- <ul>
                                 <li><i class="fa fa-object-group"></i> 2, 283</li>
                                 <li><i class="fa fa-bathtub"></i> 03</li>
@@ -590,7 +590,7 @@
                         <div class="pi-text">
                             <!-- <a href="#" class="heart-icon"><span class="icon_heart_alt"></span></a>
                             <div class="pt-price">$ 289.0</div> -->
-                            <h5><a href="#">Stade Japoma</a></h5>
+                            <h5><a href="#">Entrepôt</a></h5>
                             <p><span class="icon_pin_alt"></span> Cameroun Douala, Japoma</p>
                            <!--  <ul>
                                 <li><i class="fa fa-object-group"></i> 2, 283</li>
@@ -620,8 +620,8 @@
                         <div class="pi-text">
                             <!-- <a href="#" class="heart-icon"><span class="icon_heart_alt"></span></a>
                             <div class="pt-price">$ 289.0</div> -->
-                            <h5><a href="#">Batiment boulement du 20 Mai</a></h5>
-                            <p><span class="icon_pin_alt"></span> Cameroun Yaoundé, Poste centrale</p>
+                            <h5><a href="#">Cuve</a></h5>
+                            <p><span class="icon_pin_alt"></span> Cameroun Yaoundé</p>
                             <!-- <ul>
                                 <li><i class="fa fa-object-group"></i> 2, 283</li>
                                 <li><i class="fa fa-bathtub"></i> 03</li>
@@ -648,7 +648,7 @@
     <!-- Property Section End -->
 
     <!-- Chooseus Section Begin -->
-    <section class="chooseus-section spad set-bg" data-setbg="img/chooseus/chooseus-bg.jpg">
+    <section class="chooseus-section spad set-bg" data-setbg="img/chooseus/b1.jpg">
         <div class="container">
             <div class="row">
                 <div class="col-lg-8">
@@ -846,7 +846,7 @@
                     <span>48 réalisations</span>
                 </div>
             </div>
-            <div class="cs-item set-bg" data-setbg="img/categories/c3.jpg">
+            <div class="cs-item set-bg" data-setbg="img/categories/c8.jpg">
                 <div class="cs-text" style="margin-top: 110%;">
                     <h5>Complexes</h5>
                     <span>5 réalisations</span>
@@ -858,10 +858,10 @@
                     <span>5 réalisations</span>
                 </div>
             </div>
-            <div class="cs-item set-bg" data-setbg="img/categories/c5.jpg">
+            <div class="cs-item set-bg" data-setbg="img/categories/c10.jpg">
                 <div class="cs-text" style="margin-top: 110%;">
-                    <h5>Offices</h5>
-                    <span>30 réalisations</span>
+                    <h5>Formations</h5>
+                    <span>Près de 200 agents formés</span>
                 </div>
             </div>
         </div>
@@ -1095,7 +1095,7 @@
                         <p>...Echafaudons l'impossible</p>
                         <form action="#" class="subscribe-form">
                             <input type="text" placeholder="Email">
-                            <button type="submit" class="site-btn">Subscribe</button>
+                            <button type="submit" class="site-btn">Send</button>
                         </form>
                     </div>
                 </div>
